{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 891,
  "lineage": "82ca3be4-c8cb-5a08-aee7-12ae1c4a0663",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "onprem_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:route-table/rtb-0f385450c2cafd59c",
            "default_route_table_id": "rtb-0f385450c2cafd59c",
            "id": "rtb-0f385450c2cafd59c",
            "owner_id": "492696539201",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08261c160414d15e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.2.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.3.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.4.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-building-blocs-vpc-onprem"
            },
            "tags_all": {
              "Name": "rtb-building-blocs-vpc-onprem"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d565e56fa60e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_internet_gateway.igw_onprem",
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "spoke1_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:route-table/rtb-07e7a10ca87fb0408",
            "default_route_table_id": "rtb-07e7a10ca87fb0408",
            "id": "rtb-07e7a10ca87fb0408",
            "owner_id": "492696539201",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.10.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.2.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.4.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "building-blocs-vpc-spoke-1-rtb"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-1-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c5a45ad50d2e768"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "spoke2_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:route-table/rtb-06dff3b5272e9078b",
            "default_route_table_id": "rtb-06dff3b5272e9078b",
            "id": "rtb-06dff3b5272e9078b",
            "owner_id": "492696539201",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.10.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.2.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.3.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "building-blocs-vpc-spoke-2-rtb"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-2-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b07f0acc740abd3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "Egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:security-group/sg-0fc9ff2ceb4dc7afe",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc9ff2ceb4dc7afe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "492696539201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-default-Egress"
            },
            "tags_all": {
              "Name": "SG-default-Egress"
            },
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:security-group/sg-06786b266c3140adf",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06786b266c3140adf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "492696539201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-default-onprem"
            },
            "tags_all": {
              "Name": "SG-default-onprem"
            },
            "vpc_id": "vpc-010d565e56fa60e6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "spoke_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:security-group/sg-0125e7b92281f079c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0125e7b92281f079c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "492696539201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-default-spoke1"
            },
            "tags_all": {
              "Name": "SG-default-spoke1"
            },
            "vpc_id": "vpc-09c5a45ad50d2e768"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "spoke_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:security-group/sg-0fb36dee2b84a8853",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb36dee2b84a8853",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol icmp",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all traffic with protocol ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "492696539201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-default-spoke2"
            },
            "tags_all": {
              "Name": "SG-default-spoke2"
            },
            "vpc_id": "vpc-0b07f0acc740abd3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:492696539201:transit-gateway/tgw-0ba432cddbc26352a",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Create a transit gateway to manage the traffics from egress to spokes and back",
            "dns_support": "enable",
            "id": "tgw-0ba432cddbc26352a",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-tgw"
            },
            "tags_all": {
              "Name": "building-blocs-tgw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "rtb_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:transit-gateway-route-table/tgw-rtb-0b3587c51faf6c6c7",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0b3587c51faf6c6c7",
            "tags": {
              "Name": "building-blocs-rtb_hub"
            },
            "tags_all": {
              "Name": "building-blocs-rtb_hub"
            },
            "transit_gateway_id": "tgw-0ba432cddbc26352a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "rtb_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:transit-gateway-route-table/tgw-rtb-014e9bb1c2c009b9a",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-014e9bb1c2c009b9a",
            "tags": {
              "Name": "building-blocs-rtb_spoke"
            },
            "tags_all": {
              "Name": "building-blocs-rtb_spoke"
            },
            "transit_gateway_id": "tgw-0ba432cddbc26352a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "rt_ass_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0b3587c51faf6c6c7_tgw-attach-08712653b6cd6d182",
            "resource_id": "vpc-046e42e450bad8749",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-08712653b6cd6d182",
            "transit_gateway_route_table_id": "tgw-rtb-0b3587c51faf6c6c7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_hub",
            "aws_ec2_transit_gateway_vpc_attachment.egress_tgw",
            "aws_subnet.private_subnets_egress_mgmt_tgw",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "rt_ass_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-014e9bb1c2c009b9a_tgw-attach-0d7531d9910dd2751",
            "resource_id": "vpc-010d565e56fa60e6c",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d7531d9910dd2751",
            "transit_gateway_route_table_id": "tgw-rtb-014e9bb1c2c009b9a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_spoke",
            "aws_ec2_transit_gateway_vpc_attachment.onprem_tgw",
            "aws_subnet.public_subnets_onprem",
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "rt_ass_spoke_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-014e9bb1c2c009b9a_tgw-attach-03e7950ece875cb8a",
            "resource_id": "vpc-09c5a45ad50d2e768",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-03e7950ece875cb8a",
            "transit_gateway_route_table_id": "tgw-rtb-014e9bb1c2c009b9a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_spoke",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1_tgw",
            "aws_subnet.private_subnets_spoke1",
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "rt_ass_spoke_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-014e9bb1c2c009b9a_tgw-attach-0836d506dd7f75cef",
            "resource_id": "vpc-0b07f0acc740abd3c",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0836d506dd7f75cef",
            "transit_gateway_route_table_id": "tgw-rtb-014e9bb1c2c009b9a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_spoke",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_2_tgw",
            "aws_subnet.private_subnets_spoke2",
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rt_prop_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-014e9bb1c2c009b9a_tgw-attach-08712653b6cd6d182",
            "resource_id": "vpc-046e42e450bad8749",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-08712653b6cd6d182",
            "transit_gateway_route_table_id": "tgw-rtb-014e9bb1c2c009b9a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_spoke",
            "aws_ec2_transit_gateway_vpc_attachment.egress_tgw",
            "aws_subnet.private_subnets_egress_mgmt_tgw",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rt_prop_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0b3587c51faf6c6c7_tgw-attach-0d7531d9910dd2751",
            "resource_id": "vpc-010d565e56fa60e6c",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0d7531d9910dd2751",
            "transit_gateway_route_table_id": "tgw-rtb-0b3587c51faf6c6c7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_hub",
            "aws_ec2_transit_gateway_vpc_attachment.onprem_tgw",
            "aws_subnet.public_subnets_onprem",
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rt_prop_spoke_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0b3587c51faf6c6c7_tgw-attach-03e7950ece875cb8a",
            "resource_id": "vpc-09c5a45ad50d2e768",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-03e7950ece875cb8a",
            "transit_gateway_route_table_id": "tgw-rtb-0b3587c51faf6c6c7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_hub",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1_tgw",
            "aws_subnet.private_subnets_spoke1",
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "rt_prop_spoke_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0b3587c51faf6c6c7_tgw-attach-0836d506dd7f75cef",
            "resource_id": "vpc-0b07f0acc740abd3c",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0836d506dd7f75cef",
            "transit_gateway_route_table_id": "tgw-rtb-0b3587c51faf6c6c7"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.rtb_hub",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_2_tgw",
            "aws_subnet.private_subnets_spoke2",
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "egress_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-08712653b6cd6d182",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0ddca9cb2d7046951"
            ],
            "tags": {
              "Name": "building-blocs-vpc-egress-tgw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-egress-tgw"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0ba432cddbc26352a",
            "vpc_id": "vpc-046e42e450bad8749",
            "vpc_owner_id": "492696539201"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnets_egress_mgmt_tgw",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "onprem_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0d7531d9910dd2751",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-00f167e2ae98ed694"
            ],
            "tags": {
              "Name": "building-blocs-vpc-onprem-tgw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-onprem-tgw"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0ba432cddbc26352a",
            "vpc_id": "vpc-010d565e56fa60e6c",
            "vpc_owner_id": "492696539201"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.public_subnets_onprem",
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke_1_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-03e7950ece875cb8a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05b016b1fb14f2bff"
            ],
            "tags": {
              "Name": "building-blocs-vpc-spoke-1-tgw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-1-tgw"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0ba432cddbc26352a",
            "vpc_id": "vpc-09c5a45ad50d2e768",
            "vpc_owner_id": "492696539201"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnets_spoke1",
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke_2_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0836d506dd7f75cef",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0c3f75f1281c605de"
            ],
            "tags": {
              "Name": "building-blocs-vpc-spoke-2-tgw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-2-tgw"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-0ba432cddbc26352a",
            "vpc_id": "vpc-0b07f0acc740abd3c",
            "vpc_owner_id": "492696539201"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnets_spoke2",
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9d2d3b2de82b859",
            "domain": "vpc",
            "id": "eipalloc-0c9d2d3b2de82b859",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-191-94.compute-1.amazonaws.com",
            "public_ip": "52.205.191.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "building-blocs-NATGW-subnet-eip"
            },
            "tags_all": {
              "Name": "building-blocs-NATGW-subnet-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e322da50e0e90e21",
            "arn": "arn:aws:ec2:us-east-1:492696539201:instance/i-0f3830aa9b972e82a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3830aa9b972e82a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-jq",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08bf3dfd0216d7a3f",
            "private_dns": "ip-192-168-10-29.ec2.internal",
            "private_ip": "192.168.10.29",
            "public_ip": "44.195.24.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0662e3de862390a4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f167e2ae98ed694",
            "tags": {
              "Name": "building-blocs-vpc-onprem-instance"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-onprem-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06786b266c3140adf"
            ]
          },
          "dependencies": [
            "aws_default_security_group.onprem",
            "aws_subnet.public_subnets_onprem",
            "aws_vpc.vpc_onprem",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e322da50e0e90e21",
            "arn": "arn:aws:ec2:us-east-1:492696539201:instance/i-037d79dfe1fa8bed7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037d79dfe1fa8bed7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-jq",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09904b925db854777",
            "private_dns": "ip-192-168-3-56.ec2.internal",
            "private_ip": "192.168.3.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074cfde72b60a31e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b016b1fb14f2bff",
            "tags": {
              "Name": "building-blocs-vpc-spoke-1-instance}"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-1-instance}"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0125e7b92281f079c"
            ]
          },
          "dependencies": [
            "aws_default_security_group.spoke_1",
            "aws_subnet.private_subnets_spoke1",
            "aws_vpc.vpc_spoke1",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e322da50e0e90e21",
            "arn": "arn:aws:ec2:us-east-1:492696539201:instance/i-02e11a9b95a464663",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e11a9b95a464663",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-jq",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf3341f5a6827d98",
            "private_dns": "ip-192-168-4-30.ec2.internal",
            "private_ip": "192.168.4.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efdc30d19615640a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3f75f1281c605de",
            "tags": {
              "Name": "building-blocs-vpc-spoke-2-instance"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-2-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb36dee2b84a8853"
            ]
          },
          "dependencies": [
            "aws_default_security_group.spoke_2",
            "aws_subnet.private_subnets_spoke2",
            "aws_vpc.vpc_spoke2",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:internet-gateway/igw-0851c98ad9760827b",
            "id": "igw-0851c98ad9760827b",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-vpc-egress-igw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-egress-igw"
            },
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:internet-gateway/igw-08261c160414d15e1",
            "id": "igw-08261c160414d15e1",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-vpc-onprem-igw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-onprem-igw"
            },
            "vpc_id": "vpc-010d565e56fa60e6c"
          },
          "dependencies": [
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "glb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492696539201:loadbalancer/gwy/glb/33e387daf789d010",
            "arn_suffix": "gwy/glb/33e387daf789d010",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:492696539201:loadbalancer/gwy/glb/33e387daf789d010",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "gateway",
            "name": "glb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09170ab25b6896c93"
              }
            ],
            "subnets": [
              "subnet-09170ab25b6896c93"
            ],
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9d2d3b2de82b859",
            "connectivity_type": "public",
            "id": "nat-0dabf4276c1c74e0e",
            "network_interface_id": "eni-030f8d29180b13618",
            "private_ip": "192.168.2.91",
            "public_ip": "52.205.191.94",
            "subnet_id": "subnet-09755648bfca70550",
            "tags": {
              "Name": "building-blocs-vpc-egress-natgw"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-egress-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_egress",
            "aws_internet_gateway.igw_egress",
            "aws_subnet.public_subnets_egress_NATGW_subnet",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_egress_mgmt_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:route-table/rtb-0d79fe7ef089b8acd",
            "id": "rtb-0d79fe7ef089b8acd",
            "owner_id": "492696539201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0c697e07fe0344f74",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.10.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.3.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.4.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-mgmt-tgw-vpc-egress"
            },
            "tags_all": {
              "Name": "rtb-mgmt-tgw-vpc-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_lb.glb",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_vpc.vpc_egress",
            "aws_vpc_endpoint.gwlb_endpoint",
            "aws_vpc_endpoint_service.gwlb_endpoint_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_gwlbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:route-table/rtb-078e6bc2f6059e152",
            "id": "rtb-078e6bc2f6059e152",
            "owner_id": "492696539201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0dabf4276c1c74e0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.10.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.3.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.4.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0ba432cddbc26352a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-gwlbe-vpc-egress"
            },
            "tags_all": {
              "Name": "rtb-gwlbe-vpc-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_eip.eip_nat_egress",
            "aws_internet_gateway.igw_egress",
            "aws_nat_gateway.nat_egress",
            "aws_subnet.public_subnets_egress_NATGW_subnet",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:route-table/rtb-0391eeb156d39408c",
            "id": "rtb-0391eeb156d39408c",
            "owner_id": "492696539201",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0851c98ad9760827b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.10.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0c697e07fe0344f74",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.3.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0c697e07fe0344f74",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.4.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0c697e07fe0344f74",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-nat-vpc-egress"
            },
            "tags_all": {
              "Name": "rtb-nat-vpc-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_egress",
            "aws_lb.glb",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_vpc.vpc_egress",
            "aws_vpc_endpoint.gwlb_endpoint",
            "aws_vpc_endpoint_service.gwlb_endpoint_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gwlbe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0305635efbf709dfc",
            "route_table_id": "rtb-078e6bc2f6059e152",
            "subnet_id": "subnet-016484b5d8ac54cbe"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_eip.eip_nat_egress",
            "aws_internet_gateway.igw_egress",
            "aws_nat_gateway.nat_egress",
            "aws_route_table.rtb_gwlbe",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.public_subnets_egress_NATGW_subnet",
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mgmt_tgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa07c8cf1792327",
            "route_table_id": "rtb-0d79fe7ef089b8acd",
            "subnet_id": "subnet-0ddca9cb2d7046951"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_lb.glb",
            "aws_route_table.rtb_egress_mgmt_tgw",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_subnet.private_subnets_egress_mgmt_tgw",
            "aws_vpc.vpc_egress",
            "aws_vpc_endpoint.gwlb_endpoint",
            "aws_vpc_endpoint_service.gwlb_endpoint_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f40bafb3d540c5cc",
            "route_table_id": "rtb-0391eeb156d39408c",
            "subnet_id": "subnet-09755648bfca70550"
          },
          "dependencies": [
            "aws_internet_gateway.igw_egress",
            "aws_lb.glb",
            "aws_route_table.rtb_nat",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_subnet.public_subnets_egress_NATGW_subnet",
            "aws_vpc.vpc_egress",
            "aws_vpc_endpoint.gwlb_endpoint",
            "aws_vpc_endpoint_service.gwlb_endpoint_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "onprem_default_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b19dd06cc3ad5acc",
            "route_table_id": "rtb-0f385450c2cafd59c",
            "subnet_id": "subnet-00f167e2ae98ed694"
          },
          "dependencies": [
            "aws_default_route_table.onprem_default",
            "aws_ec2_transit_gateway.tgw",
            "aws_internet_gateway.igw_onprem",
            "aws_subnet.public_subnets_onprem",
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke1_default_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb8d2964bc220893",
            "route_table_id": "rtb-07e7a10ca87fb0408",
            "subnet_id": "subnet-05b016b1fb14f2bff"
          },
          "dependencies": [
            "aws_default_route_table.spoke1_default",
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnets_spoke1",
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke2_default_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d56628b386c499d",
            "route_table_id": "rtb-06dff3b5272e9078b",
            "subnet_id": "subnet-0c3f75f1281c605de"
          },
          "dependencies": [
            "aws_default_route_table.spoke2_default",
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnets_spoke2",
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:security-group/sg-0ba6a23e6d5e45824",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba6a23e6d5e45824",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from health check of tg with protocol tcp",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "GENEVE",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6081
              }
            ],
            "name": "SG-data-egress",
            "name_prefix": "",
            "owner_id": "492696539201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-data"
            },
            "tags_all": {
              "Name": "SG-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.glb",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_vpc.vpc_egress",
            "aws_vpc_endpoint.gwlb_endpoint",
            "aws_vpc_endpoint_service.gwlb_endpoint_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_mgmt_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:security-group/sg-0d7edb8a2acc4d4a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7edb8a2acc4d4a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.10.0/26"
                ],
                "description": "allow traffic from onprem subnet with protocol http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.168.10.0/26"
                ],
                "description": "allow traffic from onprem subnet with protocol https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.10.0/26"
                ],
                "description": "allow traffic from onprem subnet with protocol ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-mgmt-tgw-egress",
            "name_prefix": "",
            "owner_id": "492696539201",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-mgmt-tgw"
            },
            "tags_all": {
              "Name": "SG-mgmt-tgw"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_egress_GWLBE_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-016484b5d8ac54cbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016484b5d8ac54cbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-GWLBE-subnet"
            },
            "tags_all": {
              "Name": "building-blocs-GWLBE-subnet"
            },
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_egress_data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-09170ab25b6896c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09170ab25b6896c93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-data-subnet"
            },
            "tags_all": {
              "Name": "building-blocs-data-subnet"
            },
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_egress_mgmt_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-0ddca9cb2d7046951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddca9cb2d7046951",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-mgmt-tgw-subnet"
            },
            "tags_all": {
              "Name": "building-blocs-mgmt-tgw-subnet"
            },
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-05b016b1fb14f2bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.3.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b016b1fb14f2bff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-private-subnet-spoke-1"
            },
            "tags_all": {
              "Name": "building-blocs-private-subnet-spoke-1"
            },
            "vpc_id": "vpc-09c5a45ad50d2e768"
          },
          "dependencies": [
            "aws_vpc.vpc_spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-0c3f75f1281c605de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3f75f1281c605de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-private-subnet-spoke-2"
            },
            "tags_all": {
              "Name": "building-blocs-private-subnet-spoke-2"
            },
            "vpc_id": "vpc-0b07f0acc740abd3c"
          },
          "dependencies": [
            "aws_vpc.vpc_spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets_egress_NATGW_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-09755648bfca70550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09755648bfca70550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-NATGW-subnet"
            },
            "tags_all": {
              "Name": "building-blocs-NATGW-subnet"
            },
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_vpc.vpc_egress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:subnet/subnet-00f167e2ae98ed694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.10.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f167e2ae98ed694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492696539201",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "building-blocs-private-subnet-onprem-1"
            },
            "tags_all": {
              "Name": "building-blocs-private-subnet-onprem-1"
            },
            "vpc_id": "vpc-010d565e56fa60e6c"
          },
          "dependencies": [
            "aws_vpc.vpc_onprem"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:vpc/vpc-046e42e450bad8749",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.2.0/24",
            "default_network_acl_id": "acl-09563b9bee59ad55e",
            "default_route_table_id": "rtb-0a25c08aad04b6224",
            "default_security_group_id": "sg-0fc9ff2ceb4dc7afe",
            "dhcp_options_id": "dopt-007ec6b53b1fb4b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-046e42e450bad8749",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a25c08aad04b6224",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-vpc-egress"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-egress"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:vpc/vpc-010d565e56fa60e6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.10.0/24",
            "default_network_acl_id": "acl-044aa712c9e402922",
            "default_route_table_id": "rtb-0f385450c2cafd59c",
            "default_security_group_id": "sg-06786b266c3140adf",
            "dhcp_options_id": "dopt-007ec6b53b1fb4b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-010d565e56fa60e6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f385450c2cafd59c",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-vpc-onprem"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-onprem"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:vpc/vpc-09c5a45ad50d2e768",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.3.0/24",
            "default_network_acl_id": "acl-09079e6a8ed1e8325",
            "default_route_table_id": "rtb-07e7a10ca87fb0408",
            "default_security_group_id": "sg-0125e7b92281f079c",
            "dhcp_options_id": "dopt-007ec6b53b1fb4b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09c5a45ad50d2e768",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e7a10ca87fb0408",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-vpc-spoke-1"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:vpc/vpc-0b07f0acc740abd3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.4.0/24",
            "default_network_acl_id": "acl-0b1b12717e1eebac6",
            "default_route_table_id": "rtb-06dff3b5272e9078b",
            "default_security_group_id": "sg-0fb36dee2b84a8853",
            "dhcp_options_id": "dopt-007ec6b53b1fb4b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b07f0acc740abd3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06dff3b5272e9078b",
            "owner_id": "492696539201",
            "tags": {
              "Name": "building-blocs-vpc-spoke-2"
            },
            "tags_all": {
              "Name": "building-blocs-vpc-spoke-2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlb_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492696539201:vpc-endpoint/vpce-0c697e07fe0344f74",
            "id": "vpce-0c697e07fe0344f74",
            "network_interface_ids": [
              "eni-02837c60a809bd3f8"
            ],
            "owner_id": "492696539201",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0c95612e5ab577618",
            "state": "available",
            "subnet_ids": [
              "subnet-016484b5d8ac54cbe"
            ],
            "tags": {
              "Name": "building-blocs-gwlb_endpoint"
            },
            "tags_all": {
              "Name": "building-blocs-gwlb_endpoint"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-046e42e450bad8749"
          },
          "dependencies": [
            "aws_lb.glb",
            "aws_subnet.private_subnets_egress_GWLBE_subnet",
            "aws_subnet.private_subnets_egress_data_subnet",
            "aws_vpc.vpc_egress",
            "aws_vpc_endpoint_service.gwlb_endpoint_service"
          ]
        }
      ]
    }
  ]
}